<resources>
    <string name="app_name">RecToProfile</string>
    <string name="keyingi">4-VAZIFA</string>
    <string name="odinayev_golibjon">Odinayev Golibjon</string>
    <string name="worker">Ishchi</string>
    <string name="ortga">BOSH SAHIFAGA</string>
    <string name="_3_vazifa">3-VAZIFA</string>
    <string name="_5_vazifa">5-VAZIFA</string>
    <string name="_6_vazifa">6-VAZIFA</string>
    <string name="nestedscrollview_recycledscrollview"><![CDATA[NestedScrollView&RecycledScrollView]]></string>
    <string name="home">HOME</string>
</resources>