<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mountine">

    <Button
        android:id="@+id/btn_3"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="124dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/_3_vazifa" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="124dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/keyingi" />
    <Button
        android:id="@+id/btn_5"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="124dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/_5_vazifa" />
    <Button
        android:id="@+id/btn_6"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="124dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/_6_vazifa" />

</RelativeLayout>
