<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/city">
    <TextView
        android:id="@+id/member_item_layout"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/worker"/>

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="318dp"
        android:layout_height="36dp"
        android:layout_below="@id/member_item_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:text="@string/odinayev_golibjon"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/home" />
</RelativeLayout>
